--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@mantine/core": "^7.1.0",
+    "@mantine/ds": "^7.1.0",
     "@mantine/hooks": "^7.1.0",
     "@reduxjs/toolkit": "^1.9.6",
+    "@tabler/icons-react": "^2.38.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
