--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
