--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
+    "firebase": "^10.4.0",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
